--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==0.87.0
 matplotlib==3.4.1
-numpy
+numpy==1.19.2
+protobuf==3.9.2
 pandas==1.3.2
 scikit-learn==0.24.2
 pickleshare==0.7.5
